[package]
name = "mako-studio"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "An opinionated wrapper around wgpu-rs and other crates to make it easier to produce generative art."
homepage = "https://goldiesystems.com"
repository = "https://github.com/goldiesystems/mako-studio"
readme = "README.md"

[dependencies]
